--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "readline": "^1.3.0",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
